data/all_generated_tests/raw_wast_tests/br_if_UnreachableCodeExecution_1519.wast
;; 10. **Test 10 - Invalid Operand Count Before `br_if`**:    Create an example where `br_if` is given insufficient operands (not matching `[t*]`), and check if the wizard_engine raises specific stack errors compared to generic WASM invalid instruction errors. This tests proper operand verification before `br_if`.

(assert_invalid
  (module
    (func $invalid-operand-count-br_if
      (block (result i32)
        (br_if 0 (i32.const 1))
      )
    )
  )
  "type mismatch"
)